--- a/automated Airnow API - distribution.Rmd
+++ b/automated Airnow API - distribution.Rmd
@@ -26,6 +26,7 @@ library(kableExtra)
 #Enter the date of the first of the month that you want to analyze, in YYYY-MM-DD Format. 
 #For instance, if you want to analyze June of 2020, enter "2020-06-01"
 Month_to_analyze <- "2020-07-01"
+print("hello")
 ```
 
 
