--- a/2020 US Ozone Nonattainment Analysis.Rmd
+++ b/2020 US Ozone Nonattainment Analysis.Rmd
@@ -199,7 +199,7 @@ US_2020DV <- US_2020DV %>%
 US_4thMax$O3_2020_4thMax <- cut(US_4thMax$Avg_8hr_4thMax,c(0,60,65,70,75,80,150), include.lowest = T,labels = c('< 61','61-65','66-70','71-75','76-80','>80'))
 
 #bins the draft design value data, above and below the 0.070ppm ozone NAAQS
-US_2020DV$O3_NAAQS_Attainment <- cut(US_2020DV$Draft_DV_18_20,c(0,0.061,0.066,0.071,0.076, 0.08,0.150), include.lowest = T,labels = c('< 61','61-65','66-70','71-75','76-80','>80'))
+US_2020DV$O3_NAAQS_Attainment <- cut(US_2020DV$Draft_DV_18_20,c(0,60,65,70,75,80,150), include.lowest = T,labels = c('< 61','61-65','66-70','71-75','76-80','>80'))
 
 
 #color pallette is set
@@ -224,6 +224,7 @@ map_combined <- leaflet() %>%
                                                "AQS ID: ",US_4thMax$Monitor_ID,"<br>",
                                                "2020 4th Max: ",US_4thMax$Avg_8hr_4thMax," ppb")),
                    label = as.character(US_4thMax$SiteName),
+                   labelOptions = labelOptions(textsize = "15px"),
                    color = ~monitorCol(O3_2020_4thMax),
                    radius = 4,
                    stroke = F, fillOpacity = 1,
@@ -237,6 +238,7 @@ map_combined <- leaflet() %>%
                                                "AQS ID: ",US_2020DV$Monitor_ID,"<br>",
                                                "2020 Draft DV: ",US_2020DV$Draft_DV_18_20," ppb")),
                    label = as.character(US_2020DV$SiteName),
+                   labelOptions = labelOptions(textsize = "15px"),
                    color = ~monitorCol(O3_NAAQS_Attainment),
                    radius = 4,
                    stroke = F, fillOpacity = 1,
