Update automated Airnow API - distribution.Rmd

--- a/automated Airnow API - distribution.Rmd
+++ b/automated Airnow API - distribution.Rmd
@@ -250,8 +250,26 @@ Some takeaways from the cross tabulation:
 # Full Dataset
 ```{r, echo=FALSE}
 Month_analysis %>% 
-  mutate(Actual_Category = cell_spec(Actual_Category, "html", color = "white", background = ifelse(Actual_Category == Forecast_Category, "#22e636", "red"))) %>% 
+  mutate("Same" = ifelse(Forecast_Category == Actual_Category, 1, 0),
+    Forecast_Category = cell_spec(Forecast_Category, "html", color = "white", background = ifelse(Same == 1, "#22e636", "red")), 
+    Actual_Category = cell_spec(Actual_Category, "html", color = "white", background = ifelse(Same == 1, "#22e636", "red")),
+    Actual_AQI = cell_spec(Actual_AQI, "html", background = ifelse(Actual_AQI >100, "orange", "white"))) %>% 
+  select(-Same) %>% 
   kable("html", escape = F) %>% 
    kable_styling()
+
+
+# these chunks will color the entire row. I could not successfully cmobine row_spec with col_spec... 
+# Month_analysis %>% 
+#   kable() %>% 
+#    kable_styling() %>% 
+#   row_spec(which(Month_analysis$Forecast_Category != Month_analysis$Actual_Category), background = "red")
+# 
+# Month_analysis %>% 
+#   kable() %>% 
+#    kable_styling() %>% 
+# row_spec(which(Month_analysis$Actual_AQI >100), background = "red")
+
+
 ```
 
