--- a/2020 US Ozone Nonattainment Analysis.Rmd
+++ b/2020 US Ozone Nonattainment Analysis.Rmd
@@ -110,7 +110,7 @@ for (i in 1:length(file_list)){
 #   data <- read.delim(temp_url, header = FALSE, sep="|", as.is=TRUE)
 #   df_total <- rbind(df_total,data)
 # })
-
+ 
 #----------
 
 #list of names for the header of the data frame
@@ -211,6 +211,24 @@ US_2020DV$O3_NAAQS_Attainment <- cut(US_2020DV$Draft_DV_18_20,c(0,60,65,70,75,80
 monitorCol <- colorFactor(c('blue','purple','green','yellow','orange','red'), 
                           domain = c('< 61','61-65','66-70','71-75','76-80','>80'))
 
+tag.map.title <- tags$style(HTML("
+  .leaflet-control.map-title { 
+    transform: translate(-50%,20%);
+    position: fixed !important;
+    left: 50%;
+    text-align: center;
+    padding-left: 8px; 
+    padding-right: 8px; 
+    background: rgba(192,192,192,1);
+    font-weight: bold;
+    font-size: 20px;
+  }
+"))
+
+title <- tags$div(
+  tag.map.title, HTML(paste0("AirNow Data From ",ozone_start_date," Through ",Date_Today))
+)  
+
 # The Leaflet map widget is set to a variable "map".
 # Layers are defined for use with an interactive layer display.
 map_combined <- leaflet() %>% 
@@ -251,6 +269,8 @@ map_combined <- leaflet() %>%
   
   addLegend('bottomright', pal = monitorCol, values = US_4thMax$O3_2020_4thMax,
             title = '2020 Preliminary Ozone Values',opacity = 1) %>%
+  
+  addControl(title, position = "topright", className="map-title") %>%
   
   addLayersControl(
     baseGroups = c("2020 4th Max", "2020 DV"),
